34/44 in codegen